--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,14 @@
   <h1 class="container-fixed pt-4 text-2xl">Expense Exchange</h1>
 
   <nav class="container-fixed flex flex-row flex-wrap items-baseline gap-x-4 py-4">
-    <a class="link text-lg" routerLink="/">Home</a>
-    <a class="link text-lg" routerLink="/dev">Dev <small> (only on localhost)</small></a>
+    @for (link of LINKS; track $index) {
+      <a class="link text-lg" routerLink="/{{ link.id }}">
+        {{ link.displayAs }}
+        @if (link.note) {
+          <small> ({{ link.note }})</small>
+        }
+      </a>
+    }
   </nav>
 </header>
 
