Settings Page + User Selection
* Add Settings Page
* Able to change current user in settings
* Add route guards against null user to redirect to settings
* Add page layout to unify page look
* Header component displays available links based on route guard and current user
* Expense details paidByUser defaults to current user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,4 @@
-<header class="bg-neutral-100">
-  <h1 class="container-fixed pt-4 text-2xl">Expense Exchange</h1>
-
-  <nav class="container-fixed flex flex-row flex-wrap items-baseline gap-x-4 py-4">
-    @for (link of LINKS; track $index) {
-      <a class="link text-lg" routerLink="/{{ link.id }}">
-        {{ link.displayAs }}
-        @if (link.note) {
-          <small> ({{ link.note }})</small>
-        }
-      </a>
-    }
-  </nav>
-</header>
+<app-header></app-header>
 
 <hr />
 
