--- a/src/app/pages/dashboard-page/dashboard-page.component.html
+++ b/src/app/pages/dashboard-page/dashboard-page.component.html
@@ -1,6 +1,5 @@
-<h1>Dashboard</h1>
-
-<hr />
-<!-- @for (expense of expenses; track $index) {
-  <app-expense [expense]="expense"></app-expense>
-} -->
+<app-page-layout [title]="'Dashboard'">
+  <div class="container-fixed">
+    <pre>dash </pre>
+  </div>
+</app-page-layout>
