--- a/src/app/pages/dev-page/dev-page.component.html
+++ b/src/app/pages/dev-page/dev-page.component.html
@@ -1,5 +1,7 @@
 <!-- Insert code here, but do not commit -->
-<section class="container-fixed">
-  Space for testing out code.
-  <br />Do not save changes to repo
-</section>
+<app-page-layout [title]="'Dev'">
+  <div class="container-fixed">
+    Space for testing out code.
+    <br />Do not save changes to repo
+  </div>
+</app-page-layout>
