--- a/src/app/pages/users-page/users-page.component.html
+++ b/src/app/pages/users-page/users-page.component.html
@@ -1,3 +1,5 @@
-<pre>
-  {{ users | json }}
-</pre>
+<app-page-layout [title]="'Users'">
+  <div class="container-fixed">
+    <pre>{{ users | json }} </pre>
+  </div>
+</app-page-layout>
